cars-api/src/istio/cars-api-0.0.1-all.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=cars-api&var-version=0.0.1
  labels:
    app: cars-api
    provider: fabric8
    version: 0.0.1
    group: com.redhat.developers
  name: cars-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cars-api
      provider: fabric8
      group: com.redhat.developers
  template:
    metadata:
      annotations:
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=cars-api&var-version=0.0.1
      labels:
        app: cars-api
        provider: fabric8
        version: 0.0.1
        group: com.redhat.developers
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: kameshsampath/cars-api:0.0.1
        imagePullPolicy: IfNotPresent
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    expose: "true"
    app: cars-api
    provider: fabric8
    version: 0.0.1
    group: com.redhat.developers
  name: cars-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cars-api
    provider: fabric8
    group: com.redhat.developers
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: cars-api
    provider: fabric8
    version: 0.0.1
    group: com.redhat.developers
  name: cars-api
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: cars-api
